--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -161,11 +161,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 8,
+"column": 51,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 132,
-"scroll_position": 124.0,
+"h_scroll_position": 50,
+"row": 135,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -203,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
-"folded_lines": Array[int]([55, 61, 81, 111, 114, 119, 151, 159, 165, 211, 222, 266, 271]),
-"h_scroll_position": 0,
-"row": 114,
-"scroll_position": 6.0,
+"column": 45,
+"folded_lines": Array[int]([229, 273]),
+"h_scroll_position": 8,
+"row": 305,
+"scroll_position": 253.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
