--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -34,8 +34,8 @@ selected_main_editor_idx=2
 [ScriptEditor]
 
 open_scripts=["res://states/game/game.gd", "res://objects/character/player/player.gd"]
-selected_script="res://states/game/game.gd"
-open_help=[]
+selected_script="res://objects/character/player/player.gd"
+open_help=["Quaternion"]
 script_split_offset=112
 list_split_offset=75
 zoom_factor=1.0
