--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://packets.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/connected/", "res://objects/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/", "res://components/escape_menu/game/", "res://components/chat/", "res://classes/message/", "res://autoloads/", "res://assets/textures/prototype/")
+dock_filesystem_selected_paths=PackedStringArray("res://objects/character/player/player.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/connected/", "res://objects/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/escape_menu/game/", "res://components/chat/", "res://classes/message/", "res://assets/textures/prototype/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
 dock_5="Inspector,Node,History"
@@ -28,15 +28,15 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/player/player.tscn")
 current_scene="res://objects/character/player/player.tscn"
 center_split_offset=-192
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 
 [ScriptEditor]
 
 open_scripts=["res://states/game/game.gd", "res://objects/character/player/player.gd"]
 selected_script="res://objects/character/player/player.gd"
-open_help=["Quaternion"]
-script_split_offset=112
+open_help=[]
+script_split_offset=115
 list_split_offset=75
 zoom_factor=1.0
 
