--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -87,16 +87,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
+"row": 20,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 7,
-"selection_from_line": 19,
-"selection_to_column": 27,
-"selection_to_line": 19,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -133,12 +129,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 6,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 6,
+"selection_to_column": 1,
+"selection_to_line": 15,
 "syntax_highlighter": "GDScript"
 }
 
@@ -161,11 +161,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 51,
+"column": 63,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 50,
-"row": 135,
-"scroll_position": 0.0,
+"h_scroll_position": 0,
+"row": 41,
+"scroll_position": 41.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -203,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 45,
-"folded_lines": Array[int]([229, 273]),
-"h_scroll_position": 8,
-"row": 305,
-"scroll_position": 253.0,
+"column": 24,
+"folded_lines": Array[int]([152, 186, 193, 205, 267, 281, 388, 409]),
+"h_scroll_position": 0,
+"row": 415,
+"scroll_position": 88.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
