--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -165,7 +165,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 41,
-"scroll_position": 41.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -203,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
-"folded_lines": Array[int]([152, 186, 193, 205, 267, 281, 388, 409]),
+"column": 2,
+"folded_lines": Array[int]([384, 405]),
 "h_scroll_position": 0,
-"row": 415,
-"scroll_position": 88.0,
+"row": 178,
+"scroll_position": 168.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
