--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,25 +17,24 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://states/connected/connected.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/connected/", "res://objects/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/escape_menu/game/", "res://components/chat/", "res://classes/message/", "res://assets/textures/prototype/")
+dock_filesystem_selected_paths=PackedStringArray("res://autoloads/websocket.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/connected/", "res://objects/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/escape_menu/game/", "res://components/chat/", "res://classes/message/", "res://autoloads/", "res://assets/textures/prototype/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/player/player.tscn")
-current_scene="res://objects/character/player/player.tscn"
+open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/player/player.tscn", "res://states/connected/connected.tscn")
+current_scene="res://maps/prototype/prototype.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=1
 
 [ScriptEditor]
 
-open_scripts=["res://states/game/game.gd", "res://objects/character/player/player.gd"]
-selected_script="res://objects/character/player/player.gd"
+open_scripts=["res://states/game/game.gd", "res://objects/character/player/player.gd", "res://autoloads/websocket.gd"]
+selected_script="res://autoloads/websocket.gd"
 open_help=[]
 script_split_offset=115
 list_split_offset=75
