--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -9,32 +9,35 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=284
-dock_hsplit_3=-228
+dock_hsplit_2=376
+dock_hsplit_3=-304
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://autoloads/websocket.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/connected/", "res://objects/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/escape_menu/game/", "res://components/chat/", "res://classes/message/", "res://autoloads/", "res://assets/textures/prototype/")
+dock_filesystem_selected_paths=PackedStringArray("res://main.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/", "res://assets/textures/prototype/")
+dock_node_current_tab=0
+dock_history_include_scene=true
+dock_history_include_global=true
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/player/player.tscn", "res://states/connected/connected.tscn")
-current_scene="res://maps/prototype/prototype.tscn"
+open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/player/player.tscn")
+current_scene="res://objects/character/player/player.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://states/game/game.gd", "res://objects/character/player/player.gd", "res://autoloads/websocket.gd"]
-selected_script="res://autoloads/websocket.gd"
+open_scripts=["res://states/game/game.gd", "res://objects/character/player/player.gd"]
+selected_script="res://states/game/game.gd"
 open_help=[]
 script_split_offset=115
 list_split_offset=75
@@ -56,3 +59,14 @@ log_filter_3=false
 log_filter_4=true
 collapse=false
 show_search=true
+
+[EditorWindow]
+
+screen=0
+mode="maximized"
+position=Vector2i(0, 23)
+
+[GameView]
+
+floating_window_rect=Rect2i(0, 23, 1360, 697)
+floating_window_screen=0
