--- a/client/.godot/global_script_class_cache.cfg
+++ b/client/.godot/global_script_class_cache.cfg
@@ -1,7 +1,9 @@
-list=Array[Dictionary]([{
+list=[{
 "base": &"RichTextLabel",
 "class": &"Message",
 "icon": "",
+"is_abstract": false,
+"is_tool": false,
 "language": &"GDScript",
 "path": "res://classes/message/message.gd"
-}])
+}]
