--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://main.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/", "res://assets/textures/prototype/")
+dock_filesystem_selected_paths=PackedStringArray("res://states/game/game.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://autoloads/", "res://assets/textures/prototype/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -36,7 +36,7 @@ selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://states/game/game.gd", "res://objects/character/player/player.gd"]
+open_scripts=["res://states/connected/connected.gd", "res://states/game/game.gd", "res://objects/character/player/player.gd", "res://autoloads/websocket.gd"]
 selected_script="res://states/game/game.gd"
 open_help=[]
 script_split_offset=115
