--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -161,16 +161,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 239,
-"scroll_position": 217.0,
+"row": 248,
+"scroll_position": 159.0,
 "selection": true,
-"selection_from_column": 10,
-"selection_from_line": 239,
-"selection_to_column": 28,
-"selection_to_line": 239,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 248,
 "syntax_highlighter": "GDScript"
 }
 
@@ -207,11 +207,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
-"folded_lines": Array[int]([506, 527]),
+"column": 0,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 519,
-"scroll_position": 508.0,
+"row": 405,
+"scroll_position": 381.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
