--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -161,16 +161,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 34,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 240,
-"scroll_position": 232.0,
-"selection": true,
-"selection_from_column": 10,
-"selection_from_line": 240,
-"selection_to_column": 28,
-"selection_to_line": 240,
+"row": 239,
+"scroll_position": 227.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -207,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 44,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 275,
-"scroll_position": 266.0,
+"row": 205,
+"scroll_position": 198.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
