--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://states/authentication/authentication.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://states/authentication/", "res://objects/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://assets/textures/prototype/")
+dock_filesystem_selected_paths=PackedStringArray("res://autoloads/utils.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://states/authentication/", "res://objects/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://autoloads/", "res://assets/textures/prototype/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -31,8 +31,9 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/player/player.tscn")
 current_scene="res://maps/prototype/prototype.tscn"
 center_split_offset=-197
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
