--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -10,7 +10,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=264
-dock_hsplit_3=-304
+dock_hsplit_3=-266
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
@@ -30,14 +30,15 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/player/player.tscn")
 current_scene="res://maps/prototype/prototype.tscn"
-center_split_offset=-197
+center_split_offset=-224
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://states/game/game.gd", "res://objects/character/player/player.gd", "res://autoloads/utils.gd"]
-selected_script="res://objects/character/player/player.gd"
+selected_script="res://states/game/game.gd"
 open_help=[]
 script_split_offset=169
 list_split_offset=75
