--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -81,7 +81,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 67,
-"scroll_position": 51.0,
+"scroll_position": 59.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -95,7 +95,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 0,
-"scroll_position": 0.0,
+"scroll_position": 5.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -105,12 +105,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 1,
-"scroll_position": 1.0,
-"selection": false,
+"row": 15,
+"scroll_position": 85.0,
+"selection": true,
+"selection_from_column": 21,
+"selection_from_line": 15,
+"selection_to_column": 23,
+"selection_to_line": 15,
 "syntax_highlighter": "GDScript"
 }
 
@@ -133,12 +137,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 60,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 51,
-"scroll_position": 51.0,
-"selection": false,
+"row": 49,
+"scroll_position": 42.0,
+"selection": true,
+"selection_from_column": 53,
+"selection_from_line": 49,
+"selection_to_column": 60,
+"selection_to_line": 49,
 "syntax_highlighter": "GDScript"
 }
 
@@ -203,11 +211,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 49,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 279,
-"scroll_position": 264.0,
+"row": 275,
+"scroll_position": 267.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -217,11 +225,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 35,
-"scroll_position": 20.0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
