--- a/client/.godot/editor/project_metadata.cfg
+++ b/client/.godot/editor/project_metadata.cfg
@@ -39,7 +39,9 @@ run_deploy_remote_debug=false
 
 [export_options]
 
-default_filename="MMO Client"
+default_filename="mmo_client_windows_v0.0.2.6"
+export_debug=false
+export_as_patch=false
 
 [project_settings]
 
