--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -10,7 +10,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=264
-dock_hsplit_3=-265
+dock_hsplit_3=-264
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
@@ -18,7 +18,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://states/connected/connected.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://states/connected/", "res://states/authentication/", "res://objects/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/", "res://components/chat_bubble/", "res://autoloads/", "res://assets/textures/prototype/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://states/", "res://states/game/", "res://states/connected/", "res://states/authentication/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/", "res://components/chat_bubble/", "res://autoloads/", "res://assets/textures/prototype/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,10 +28,10 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/player/player.tscn", "res://states/connected/connected.tscn")
-current_scene="res://states/connected/connected.tscn"
+open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/player/player.tscn")
+current_scene="res://objects/character/player/player.tscn"
 center_split_offset=-197
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
