--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://states/connected/connected.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://states/", "res://states/game/", "res://states/connected/", "res://states/authentication/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/", "res://components/chat_bubble/", "res://autoloads/", "res://assets/textures/prototype/")
+dock_filesystem_selected_paths=PackedStringArray("res://states/connected/connected.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://states/connected/", "res://states/authentication/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/", "res://components/chat_bubble/", "res://autoloads/", "res://assets/textures/prototype/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
