--- a/client/.godot/editor/project_metadata.cfg
+++ b/client/.godot/editor/project_metadata.cfg
@@ -22,7 +22,7 @@ last_selected_language="GDScript"
 [debug_options]
 
 run_main_feature_tags=""
-multiple_instances_enabled=true
+multiple_instances_enabled=false
 run_instances_config=Array[Dictionary]([{
 "arguments": "",
 "features": "",
@@ -34,12 +34,12 @@ run_instances_config=Array[Dictionary]([{
 "override_args": false,
 "override_features": false
 }])
-run_debug_collisions=false
+run_debug_collisions=true
 run_deploy_remote_debug=false
 
 [export_options]
 
-default_filename="mmo_client_windows_v0.0.2.6"
+default_filename="mmo_client_linux_v0.0.2.6"
 export_debug=true
 export_as_patch=false
 
@@ -50,7 +50,8 @@ advanced_mode=true
 [color_picker]
 
 picker_shape=3
-recent_presets=PackedColorArray(0, 1, 1, 1, 0.329412, 1, 1, 1, 0.207843, 1, 1, 1, 0.207843, 1, 0.278431, 1, 0.207843, 1, 0.427451, 1, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1)
+recent_presets=PackedColorArray(0.207843, 1, 0.427451, 1, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0.473767, 0.509144, 0.789227, 0.42, 0, 0.6, 0.701961, 1, 0, 0.550181, 0.92477, 1, 0.7, 0, 0, 1)
+color_mode=1
 
 [linked_properties]
 
