--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -169,12 +169,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 238,
-"scroll_position": 191.0,
-"selection": false,
+"row": 227,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 70,
+"selection_from_line": 226,
+"selection_to_column": 33,
+"selection_to_line": 227,
 "syntax_highlighter": "GDScript"
 }
 
@@ -211,11 +215,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 93,
+"column": 4,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 176,
-"scroll_position": 163.0,
+"row": 412,
+"scroll_position": 408.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
