--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -172,13 +172,9 @@ state={
 "column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 227,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 70,
-"selection_from_line": 226,
-"selection_to_column": 33,
-"selection_to_line": 227,
+"row": 211,
+"scroll_position": 197.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -215,11 +211,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 36,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 488,
-"scroll_position": 479.0,
+"row": 373,
+"scroll_position": 364.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
