--- a/client/.godot/editor/project_metadata.cfg
+++ b/client/.godot/editor/project_metadata.cfg
@@ -39,7 +39,7 @@ run_deploy_remote_debug=false
 
 [export_options]
 
-default_filename="mmo_client_linux_v0.0.2.7"
+default_filename="mmo_client_windows_v0.0.2.8"
 export_debug=true
 export_as_patch=false
 
