--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -63,11 +63,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 49,
+"column": 53,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
-"scroll_position": 0.0,
+"row": 40,
+"scroll_position": 24.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -91,12 +91,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 12,
+"column": 34,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 5.0,
-"selection": false,
+"row": 20,
+"scroll_position": 6.0,
+"selection": true,
+"selection_from_column": 7,
+"selection_from_line": 20,
+"selection_to_column": 34,
+"selection_to_line": 20,
 "syntax_highlighter": "GDScript"
 }
 
@@ -169,11 +173,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 39,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 211,
-"scroll_position": 0.0,
+"row": 233,
+"scroll_position": 213.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -211,11 +215,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 29,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 559,
-"scroll_position": 547.0,
+"row": 591,
+"scroll_position": 583.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -231,5 +235,23 @@ state={
 "row": 0,
 "scroll_position": 0.0,
 "selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://components/hud/top_right_hud.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 37,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 7,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 10,
+"selection_from_line": 7,
+"selection_to_column": 37,
+"selection_to_line": 7,
 "syntax_highlighter": "GDScript"
 }
