--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -177,7 +177,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 233,
-"scroll_position": 213.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -215,11 +215,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 591,
-"scroll_position": 583.0,
+"row": 583,
+"scroll_position": 18.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -245,13 +245,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 37,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 7,
+"h_scroll_position": 3,
+"row": 9,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 10,
-"selection_from_line": 7,
-"selection_to_column": 37,
-"selection_to_line": 7,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
