--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -10,14 +10,14 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=264
-dock_hsplit_3=-332
+dock_hsplit_3=-348
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/icons/icon_run.png")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/icons/icon_movement_speed_walk.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/game/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://assets/", "res://assets/textures/prototype/", "res://assets/icons/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -33,7 +33,6 @@ current_scene="res://components/hud/top_right_hud.tscn"
 center_split_offset=-200
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
