--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/icons/icon_movement_speed_walk.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/game/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://assets/", "res://assets/textures/prototype/", "res://assets/icons/")
+dock_filesystem_selected_paths=PackedStringArray("res://states/authentication/authentication.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://states/authentication/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://autoloads/", "res://assets/", "res://assets/textures/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -29,15 +29,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/player/player.tscn", "res://states/game/game.tscn", "res://components/hud/top_right_hud.tscn")
-current_scene="res://components/hud/top_right_hud.tscn"
-center_split_offset=-200
-selected_default_debugger_tab_idx=0
+current_scene="res://states/game/game.tscn"
+center_split_offset=-197
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://states/game/game.gd", "res://autoloads/game_manager.gd", "res://objects/character/player/player.gd", "res://autoloads/signals.gd", "res://components/hud/top_right_hud.gd"]
-selected_script="res://components/hud/top_right_hud.gd"
+open_scripts=["res://states/game/game.gd", "res://objects/character/player/player.gd", "res://autoloads/signals.gd", "res://components/hud/top_right_hud.gd"]
+selected_script="res://autoloads/signals.gd"
 open_help=[]
 script_split_offset=169
 list_split_offset=75
