--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -17,16 +17,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 751,
-"scroll_position": 741.0,
+"row": 1282,
+"scroll_position": 1226.0,
 "selection": true,
 "selection_from_column": 6,
-"selection_from_line": 751,
-"selection_to_column": 15,
-"selection_to_line": 751,
+"selection_from_line": 1282,
+"selection_to_column": 13,
+"selection_to_line": 1282,
 "syntax_highlighter": "GDScript"
 }
 
@@ -63,11 +63,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 12,
+"column": 34,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
+"row": 29,
+"scroll_position": 14.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -91,12 +91,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 46,
+"column": 49,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
-"scroll_position": 0.0,
-"selection": false,
+"row": 24,
+"scroll_position": 1.0,
+"selection": true,
+"selection_from_column": 35,
+"selection_from_line": 24,
+"selection_to_column": 49,
+"selection_to_line": 24,
 "syntax_highlighter": "GDScript"
 }
 
@@ -165,11 +169,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 66,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 64,
-"scroll_position": 0.0,
+"row": 225,
+"scroll_position": 207.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -207,11 +211,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 82,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 583,
-"scroll_position": 18.0,
+"row": 174,
+"scroll_position": 170.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -235,11 +239,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 49,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
-"scroll_position": 4.0,
+"row": 45,
+"scroll_position": 20.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://autoloads/region_manager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 59,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 15,
+"scroll_position": 36.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
