--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -169,11 +169,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 66,
+"column": 32,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 225,
-"scroll_position": 207.0,
+"row": 212,
+"scroll_position": 195.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -211,11 +211,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 82,
+"column": 48,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 174,
-"scroll_position": 170.0,
+"row": 210,
+"scroll_position": 203.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -242,8 +242,8 @@ state={
 "column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 45,
-"scroll_position": 20.0,
+"row": 11,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -253,11 +253,67 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 59,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 36.0,
+"row": 6,
+"scroll_position": 54.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://classes/pathfinding/cell.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 18,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 1,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://classes/pathfinding/a_star_node.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 16,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://classes/pathfinding/priority_queue.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 17,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 24,
+"scroll_position": 11.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://autoloads/pathfinder.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 47,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 110,
+"scroll_position": 101.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
