--- a/client/.godot/global_script_class_cache.cfg
+++ b/client/.godot/global_script_class_cache.cfg
@@ -1,4 +1,20 @@
 list=[{
+"base": &"RefCounted",
+"class": &"AStarNode",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/pathfinding/a_star_node.gd"
+}, {
+"base": &"RefCounted",
+"class": &"Cell",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/pathfinding/cell.gd"
+}, {
 "base": &"RichTextLabel",
 "class": &"Message",
 "icon": "",
@@ -6,4 +22,12 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://classes/message/message.gd"
+}, {
+"base": &"RefCounted",
+"class": &"PriorityQueue",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/pathfinding/priority_queue.gd"
 }]
