--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -10,15 +10,15 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=264
-dock_hsplit_3=-348
+dock_hsplit_3=-349
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://autoloads/game_manager.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://states/authentication/", "res://objects/character/", "res://objects/character/player/", "res://maps/", "res://maps/prototype/", "res://autoloads/", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://states/connected/connected.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://states/connected/", "res://states/authentication/", "res://objects/", "res://objects/character/", "res://objects/character/player/", "res://maps/", "res://maps/prototype/", "res://classes/", "res://autoloads/", "res://assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -29,15 +29,14 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/player/player.tscn", "res://states/game/game.tscn", "res://components/hud/top_right_hud.tscn")
-current_scene="res://states/game/game.tscn"
+current_scene="res://components/hud/top_right_hud.tscn"
 center_split_offset=-197
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://states/game/game.gd", "res://autoloads/game_manager.gd", "res://objects/character/player/player.gd", "res://autoloads/region_manager.gd", "res://autoloads/signals.gd", "res://components/hud/top_right_hud.gd"]
+open_scripts=["res://classes/pathfinding/a_star_node.gd", "res://classes/pathfinding/cell.gd", "res://states/game/game.gd", "res://autoloads/game_manager.gd", "res://autoloads/pathfinder.gd", "res://objects/character/player/player.gd", "res://classes/pathfinding/priority_queue.gd", "res://autoloads/region_manager.gd", "res://autoloads/signals.gd", "res://components/hud/top_right_hud.gd"]
 selected_script="res://objects/character/player/player.gd"
 open_help=[]
 script_split_offset=169
@@ -69,5 +68,5 @@ position=Vector2i(0, 23)
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 23, 1360, 697)
+floating_window_rect=Rect2i(-93, 115, 1370, 361)
 floating_window_screen=0
