--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -211,11 +211,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 48,
+"column": 97,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 210,
-"scroll_position": 203.0,
+"row": 277,
+"scroll_position": 263.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -253,12 +253,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
-"scroll_position": 54.0,
-"selection": false,
+"row": 49,
+"scroll_position": 53.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 49,
+"selection_to_column": 22,
+"selection_to_line": 49,
 "syntax_highlighter": "GDScript"
 }
 
@@ -309,11 +313,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 47,
+"column": 73,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 110,
-"scroll_position": 101.0,
+"row": 96,
+"scroll_position": 81.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
