--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -10,7 +10,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=264
-dock_hsplit_3=-349
+dock_hsplit_3=-348
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
@@ -37,7 +37,7 @@ selected_main_editor_idx=2
 [ScriptEditor]
 
 open_scripts=["res://classes/pathfinding/a_star_node.gd", "res://classes/pathfinding/cell.gd", "res://states/game/game.gd", "res://autoloads/game_manager.gd", "res://autoloads/pathfinder.gd", "res://objects/character/player/player.gd", "res://classes/pathfinding/priority_queue.gd", "res://autoloads/region_manager.gd", "res://autoloads/signals.gd", "res://components/hud/top_right_hud.gd"]
-selected_script="res://objects/character/player/player.gd"
+selected_script="res://autoloads/pathfinder.gd"
 open_help=[]
 script_split_offset=169
 list_split_offset=75
