--- a/client/.godot/editor/project_metadata.cfg
+++ b/client/.godot/editor/project_metadata.cfg
@@ -36,6 +36,7 @@ run_instances_config=Array[Dictionary]([{
 }])
 run_debug_collisions=false
 run_deploy_remote_debug=false
+server_keep_open=false
 
 [export_options]
 
