--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -17,16 +17,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 1282,
-"scroll_position": 1226.0,
-"selection": true,
-"selection_from_column": 6,
-"selection_from_line": 1282,
-"selection_to_column": 13,
-"selection_to_line": 1282,
+"scroll_position": 1270.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -113,11 +109,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 45,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 66,
-"scroll_position": 54.0,
+"row": 67,
+"scroll_position": 51.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -173,11 +169,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 212,
-"scroll_position": 0.0,
+"row": 68,
+"scroll_position": 52.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -215,10 +211,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 404,
+"row": 394,
 "scroll_position": 381.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -257,16 +253,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 10,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 49,
-"scroll_position": 53.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 49,
-"selection_to_column": 22,
-"selection_to_line": 49,
+"row": 4,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
