--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -109,7 +109,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 82,
-"scroll_position": 75.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -165,11 +165,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 66,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 68,
-"scroll_position": 0.0,
+"row": 196,
+"scroll_position": 188.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -207,11 +207,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 63,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 29,
-"scroll_position": 21.0,
+"row": 1,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -235,12 +235,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
+"row": 12,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 19,
+"selection_from_line": 12,
+"selection_to_column": 21,
+"selection_to_line": 12,
 "syntax_highlighter": "GDScript"
 }
 
