--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -133,16 +133,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 17.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 23,
-"selection_to_column": 21,
-"selection_to_line": 23,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -165,11 +161,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 66,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 196,
-"scroll_position": 188.0,
+"row": 119,
+"scroll_position": 113.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -207,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 195,
-"scroll_position": 189.0,
+"row": 190,
+"scroll_position": 183.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
