--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -9,16 +9,16 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=305
-dock_hsplit_3=-293
+dock_hsplit_2=304
+dock_hsplit_3=-292
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://objects/characters/male_bot.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/game/", "res://objects/", "res://objects/character/", "res://maps/prototype/", "res://components/tooltip/", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/icons/outstar_online.ico")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/connected/", "res://objects/character/", "res://maps/prototype/", "res://components/tooltip/", "res://assets/", "res://assets/icons/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -32,12 +32,12 @@ open_scenes=PackedStringArray("res://objects/character/player/player.tscn")
 current_scene="res://objects/character/player/player.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 
 [ScriptEditor]
 
 open_scripts=["res://states/authentication/authentication.gd", "res://states/game/game.gd", "res://objects/character/player/player.gd"]
-selected_script="res://objects/character/player/player.gd"
+selected_script="res://states/game/game.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=75
