--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -3,10 +3,10 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 39,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 23,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -161,11 +161,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 119,
-"scroll_position": 113.0,
+"row": 97,
+"scroll_position": 87.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -206,8 +206,8 @@ state={
 "column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 190,
-"scroll_position": 183.0,
+"row": 247,
+"scroll_position": 231.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -352,6 +352,34 @@ state={
 "h_scroll_position": 0,
 "row": 33,
 "scroll_position": 21.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://classes/interactable/interactable.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 41,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://objects/interactables/crate.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 4,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
