--- a/client/.godot/global_script_class_cache.cfg
+++ b/client/.godot/global_script_class_cache.cfg
@@ -15,6 +15,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://classes/pathfinding/cell.gd"
 }, {
+"base": &"StaticBody3D",
+"class": &"Interactable",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/interactable/interactable.gd"
+}, {
 "base": &"RichTextLabel",
 "class": &"Message",
 "icon": "",
