--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -36,7 +36,7 @@ selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://objects/interactables/crate.gd", "res://classes/interactable/interactable.gd", "res://objects/character/player/player.gd", "res://autoloads/region_manager.gd"]
+open_scripts=["res://objects/interactables/crate.gd", "res://classes/interactable/interactable.gd", "res://objects/character/player/player.gd", "res://autoloads/region_manager.gd", "res://autoloads/tooltip_manager.gd"]
 selected_script="res://objects/character/player/player.gd"
 open_help=[]
 script_split_offset=140
