--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -203,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 58,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 501,
-"scroll_position": 494.0,
+"row": 300,
+"scroll_position": 287.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -249,11 +249,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 61,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 66,
-"scroll_position": 51.0,
+"row": 57,
+"scroll_position": 57.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -347,11 +347,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 37,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 33,
-"scroll_position": 21.0,
+"row": 18,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -361,12 +361,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 29,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 28,
+"row": 3,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 3,
+"selection_to_column": 32,
+"selection_to_line": 3,
 "syntax_highlighter": "GDScript"
 }
 
@@ -375,10 +379,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
