--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -203,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
-"folded_lines": Array[int]([]),
+"column": 46,
+"folded_lines": Array[int]([201, 207, 233, 245, 265]),
 "h_scroll_position": 0,
-"row": 387,
-"scroll_position": 373.0,
+"row": 805,
+"scroll_position": 756.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
