--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -3,10 +3,10 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 57,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
+"row": 20,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -203,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 82,
-"folded_lines": Array[int]([194, 200, 237, 257]),
+"column": 0,
+"folded_lines": Array[int]([194, 200, 257]),
 "h_scroll_position": 0,
-"row": 304,
-"scroll_position": 255.0,
+"row": 68,
+"scroll_position": 57.6667,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -231,11 +231,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 56,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 32,
-"scroll_position": 24.0,
+"row": 29,
+"scroll_position": 14.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -315,11 +315,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
-"folded_lines": Array[int]([106, 110, 114, 118, 122]),
+"column": 0,
+"folded_lines": Array[int]([109]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
+"row": 112,
+"scroll_position": 99.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
