--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://autoloads/signals.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/connected/", "res://objects/", "res://objects/interactables/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/tooltip/", "res://classes/player_camera/", "res://autoloads/", "res://assets/textures/prototype/orange/")
+dock_filesystem_selected_paths=PackedStringArray("res://states/game/game.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://objects/", "res://objects/interactables/", "res://objects/interactables/portals/", "res://objects/interactables/containers/", "res://objects/character/", "res://maps/prototype/", "res://classes/player_camera/", "res://assets/textures/prototype/orange/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,16 +28,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/player/player.tscn", "res://components/hud/top_right_hud.tscn")
-current_scene="res://components/hud/top_right_hud.tscn"
+open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://maps/prototype/maze.tscn", "res://objects/interactables/portals/portal.tscn")
+current_scene="res://maps/prototype/maze.tscn"
 center_split_offset=-217
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://main.gd", "res://objects/character/player/player.gd"]
-selected_script="res://objects/character/player/player.gd"
+open_scripts=["res://objects/interactables/containers/crate.gd", "res://states/game/game.gd", "res://classes/interactable/interactable.gd", "res://main.gd", "res://objects/character/player/player.gd", "res://objects/interactables/portals/portal.gd", "res://autoloads/region_manager.gd"]
+selected_script="res://states/game/game.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=75
