--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -109,7 +109,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 82,
-"scroll_position": 58.0,
+"scroll_position": 70.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -161,11 +161,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 38,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 97,
-"scroll_position": 87.0,
+"row": 193,
+"scroll_position": 185.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -203,12 +203,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 38,
 "folded_lines": Array[int]([194, 200, 257]),
 "h_scroll_position": 0,
-"row": 68,
-"scroll_position": 57.6667,
-"selection": false,
+"row": 355,
+"scroll_position": 310.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 283,
+"selection_to_column": 38,
+"selection_to_line": 355,
 "syntax_highlighter": "GDScript"
 }
 
@@ -234,8 +238,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 29,
-"scroll_position": 14.0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -245,11 +249,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 57,
-"scroll_position": 0.0,
+"row": 28,
+"scroll_position": 27.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -361,16 +365,34 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 15,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 101,
+"row": 15,
+"scroll_position": 15.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 15,
+"selection_to_column": 15,
+"selection_to_line": 15,
+"syntax_highlighter": "GDScript"
+}
+
+[res://objects/interactables/containers/crate.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
+"row": 6,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://objects/interactables/crate.gd]
+[res://objects/interactables/portals/portal.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -378,7 +400,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
+"row": 6,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
