--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://states/game/game.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://objects/", "res://objects/interactables/", "res://objects/interactables/portals/", "res://objects/interactables/containers/", "res://objects/character/", "res://maps/prototype/", "res://classes/player_camera/", "res://assets/textures/prototype/orange/")
+dock_filesystem_selected_paths=PackedStringArray("res://autoloads/tooltip_manager.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://objects/", "res://objects/interactables/", "res://objects/interactables/portals/", "res://objects/interactables/containers/", "res://objects/character/", "res://maps/prototype/", "res://classes/player_camera/", "res://autoloads/", "res://assets/textures/prototype/orange/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -37,8 +37,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://objects/interactables/containers/crate.gd", "res://states/game/game.gd", "res://classes/interactable/interactable.gd", "res://main.gd", "res://objects/character/player/player.gd", "res://objects/interactables/portals/portal.gd", "res://autoloads/region_manager.gd"]
-selected_script="res://states/game/game.gd"
+open_scripts=["res://objects/interactables/containers/crate.gd", "res://states/game/game.gd", "res://classes/interactable/interactable.gd", "res://main.gd", "res://objects/character/player/player.gd", "res://objects/interactables/portals/portal.gd", "res://autoloads/region_manager.gd", "res://autoloads/tooltip_manager.gd"]
+selected_script="res://autoloads/tooltip_manager.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=75
