--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 20,
-"scroll_position": 0.0,
+"scroll_position": 5.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -161,11 +161,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 193,
-"scroll_position": 185.0,
+"row": 293,
+"scroll_position": 279.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -203,16 +203,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 45,
 "folded_lines": Array[int]([194, 200, 257]),
 "h_scroll_position": 0,
-"row": 355,
-"scroll_position": 310.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 283,
-"selection_to_column": 38,
-"selection_to_line": 355,
+"row": 345,
+"scroll_position": 325.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -249,11 +245,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 71,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 28,
-"scroll_position": 27.0,
+"row": 38,
+"scroll_position": 24.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -347,16 +343,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 30,
-"scroll_position": 19.0,
-"selection": true,
-"selection_from_column": 28,
-"selection_from_line": 30,
-"selection_to_column": 31,
-"selection_to_line": 30,
+"row": 26,
+"scroll_position": 15.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
