--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -10,7 +10,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=304
-dock_hsplit_3=-385
+dock_hsplit_3=-384
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
@@ -37,7 +37,7 @@ selected_main_editor_idx=2
 [ScriptEditor]
 
 open_scripts=["res://states/authentication/authentication.gd", "res://components/chat/chat.gd", "res://states/game/game.gd", "res://main.gd", "res://classes/message/message.gd", "res://objects/character/player/player.gd", "res://classes/player_camera/player_camera.gd", "res://autoloads/signals.gd"]
-selected_script="res://components/chat/chat.gd"
+selected_script="res://classes/message/message.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=75
